--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <div class="emoji">💡</div>
         <div class="description"><a href="1.ray-tracing/index.html">Ray Tracing</a></div>
       </div>
+      
+      <div class="option">
+        <div class="emoji">💡</div>
+        <div class="description"><a href="2.marching-squares/index.html">Marching Squares</a></div>
+      </div>
     </div>
   </body>
 
