--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <div class="emoji">💡</div>
         <div class="description"><a href="2.marching-squares/index.html">Marching Squares</a></div>
       </div>
+
+      <div class="option">
+        <div class="emoji">💡</div>
+        <div class="description"><a href="3.untitled-perfect-lovers/index.html">Untitled (Perfect Lovers)</a></div>
+      </div>
     </div>
   </body>
 
